# collectri

./: README.md  create_knowledge_graph.py  croissant.jsonld  pyproject.toml
collectri/adapters/: collectri_adapter.py
config/: biocypher_config.yaml  schema_config.yaml
