[tool.poetry]
name = "collectri"
version = "0.1.0"
description = "CollecTRI adapter for BioCypher"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
