[tool.poetry]
name = "collectri"
version = "0.2.0"
description = "CollecTRI adapter for BioCypher"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
