[tool.poetry]
name = "collectri"
version = "0.2.2"
description = "CollecTRI adapter for BioCypher"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "0.6.1"
mlcroissant = "^1.0.22"
typing_extensions = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
